--- a/luxurious_frontend/room-2.html
+++ b/luxurious_frontend/room-2.html
@@ -600,7 +600,8 @@
 
         <!-- Main-js -->
         <script src="assets/js/main.js"></script>
-        <script src="assets/js/searchavaiRoom.js"></script>
+        <!-- <script src="assets/js/searchavaiRoom.js"></script> -->
+        <script src="assets/js/room-2.js"></script>
 
     </body>
 
