--- a/luxurious_frontend/room-details.html
+++ b/luxurious_frontend/room-details.html
@@ -422,7 +422,7 @@
                                 <p id="bedType">Super King Bed</p>
 
                                 <!-- Available Rooms -->
-                                <h4 id="availableRoomTitle"
+                                <!-- <h4 id="availableRoomTitle"
                                     style="font-size: 20px; margin-top: 10px;">Available
                                     Rooms</h4>
                                 <ul id="availableRoomList">
@@ -430,7 +430,7 @@
                                     <li>402</li>
                                     <li>403</li>
                                     <li>404</li>
-                                </ul>
+                                </ul> -->
 
                                 <!-- Amenities Section -->
                                 <div class="lh-room-details-amenities">
