final fix cua thanh

--- a/luxurious_frontend/admin/401-author-page.html
+++ b/luxurious_frontend/admin/401-author-page.html
@@ -49,7 +49,7 @@
                             <h4>Oops!</h4>
                             <p>We're sorry, <br>Sorry you are not authorized for
                                 this function...</p>
-                            <a class="lh-btn-primary" href="index.html">Login
+                            <a class="lh-btn-primary" href="index.html">Return Index
                                 Page</a>
                         </div>
                     </div>
