--- a/luxurious_frontend/admin/index.html
+++ b/luxurious_frontend/admin/index.html
@@ -148,7 +148,8 @@
 							<div class="lh-right-tool lh-user-drop">
 								<div class="lh-hover-drop">
 									<div class="lh-hover-tool">
-										<img class="user" id="conmeo" src="assets/img/user/1.jpg"
+										<img class="user" id="conmeo"
+											src="/luxurious_frontend/assets/img/amenities/3.jpg"
 											alt="user">
 									</div>
 									<div class="lh-hover-drop-panel right">
@@ -162,8 +163,12 @@
 											<li><a href="#">Messages</a></li>
 											<li><a href="team-update.html">Settings</a></li>
 										</ul>
-										<ul class="border-top">
+										<!-- <ul class="border-top">
 											<li><a href="signin.html"><i
+														class="ri-logout-circle-r-line"></i>Logout</a></li>
+										</ul> -->
+										<ul class="border-top">
+											<li><a href="#" onclick="handleLogout()"><i
 														class="ri-logout-circle-r-line"></i>Logout</a></li>
 										</ul>
 									</div>
